<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:key="@string/pref_autosync"
        android:defaultValue="false"
        android:summary="@string/pref_autosync_summary"
        android:title="@string/pref_autosync_title"
        />
    <ListPreference
        android:key="@string/pref_autosync_interval"
        android:defaultValue="180"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:title="@string/pref_autosync_interval_title"

        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        />
    <ListPreference
        android:key="@string/pref_image_type"
        android:defaultValue="@string/type_aia_171"
        android:entries="@array/pref_image_type_titles"
        android:entryValues="@array/pref_image_type_values"
        android:title="@string/pref_image_type_title"
        />
    <ListPreference
        android:key="@string/pref_image_resolution"
        android:defaultValue="512"
        android:entries="@array/pref_image_resolution_titles"
        android:entryValues="@array/pref_image_resolution_values"
        android:title="@string/pref_image_resolution_title"
        />
</PreferenceScreen>